<?xml version="1.0"?>
<package>
  <name>roboy_snapchat_filter</name>
  <version>0.0.1</version>
  <description>Including the selection of snapchat filter into conversation</description>

  <maintainer email="s.riegelbauer@tum.de">Sebastian Riegelbauer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roboy_cognition_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roboy_cognition_msgs</run_depend>

</package>
